fdo#70457: Preserve rotation of embedded bitmaps from docx

When importing bitmaps coming from VML code, we were mistakenly ignoring
rotation information: we have just added it to the existing XShape object.

In the case of bitmaps expressed in DrawingML, the code was transforming
them into SwXTextGraphicObjects which don't have rotation information.
We are now preventing that transformation when rotation value differs from
zero, leaving the XShape object that was built in the first pass through
the document.

Added a unit test.

Conflicts:
	sw/qa/extras/ooxmlimport/ooxmlimport.cxx
Reviewed on:
	https://gerrit.libreoffice.org/6484

Change-Id: I40100f8919894e48c005f8ed445bb5cad4f58d8b